[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/ai.gd" type="Script" id=1]
[ext_resource path="res://material/asphalt.tres" type="Material" id=2]
[ext_resource path="res://material/white.tres" type="Material" id=3]

[sub_resource type="PrismMesh" id=1]
size = Vector3( 0.97, 1.428, 0.258 )

[sub_resource type="SphereMesh" id=2]

[sub_resource type="CylinderMesh" id=3]
material = ExtResource( 3 )
top_radius = 0.2
height = 10.0

[node name="ai" type="Spatial"]
script = ExtResource( 1 )

[node name="marker_target" type="Spatial" parent="."]

[node name="marker_arrow" type="MeshInstance" parent="marker_target"]
transform = Transform( 1, 0, 0, 0, 0.024345, 0.999704, 0, -0.999704, 0.024345, 0, 0.571386, -1.85066 )
mesh = SubResource( 1 )
material/0 = null

[node name="marke_forward" type="Spatial" parent="."]

[node name="marker_arrow" type="MeshInstance" parent="marke_forward"]
transform = Transform( 1, 0, 0, 0, 0.024345, 0.999704, 0, -0.999704, 0.024345, 0, 0.571386, -1.85066 )
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )

[node name="next_target_market" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = null

[node name="position_marker" type="Spatial" parent="."]

[node name="poll" type="MeshInstance" parent="position_marker"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.96067, 0 )
mesh = SubResource( 3 )
material/0 = null
